--- a/index.html
+++ b/index.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3758454239921831"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>일본어 학습 전략</title>
+    <title>일본어 학습 사이트</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>일본어 학습 전략</h1>
-        <nav>
-            <ul>
-                <li><a href="#listening">듣기</a></li>
-                <li><a href="#speaking">말하기</a></li>
-                <li><a href="#reading">읽기</a></li>
-                <li><a href="#writing">쓰기</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>무료 일본어 학습</h1>
+            <nav>
+                <ul>
+                    <li><a href="#listening">듣기</a></li>
+                    <li><a href="#speaking">말하기</a></li>
+                    <li><a href="#reading">읽기</a></li>
+                    <li><a href="#writing">쓰기</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section id="listening">
-        <h2>듣기 전략</h2>
-        <p>듣기 능력을 키우기 위한 리소스를 활용해 보세요:</p>
-        <ul>
-            <li><a href="https://www3.nhk.or.jp/news/easy/" target="_blank">NHK Easy Japanese News</a> - 쉬운 일본어로 제공되는 뉴스입니다.</li>
-            <li><a href="https://www.japanesepod101.com/" target="_blank">JapanesePod101</a> - 다양한 레벨의 팟캐스트로 일본어 대화를 연습할 수 있습니다.</li>
-        </ul>
-    </section>
+    <main>
+        <section class="intro">
+            <h2>일본어를 단계별로 배워보세요!</h2>
+            <p>듣기, 말하기, 읽기, 쓰기를 단계별로 학습할 수 있습니다. 초급부터 전문가까지 다양한 난이도를 제공합니다.</p>
+        </section>
 
-    <section id="speaking">
-        <h2>말하기 전략</h2>
-        <p>일본어로 대화할 수 있는 앱을 통해 말하기 실력을 향상해 보세요:</p>
-        <ul>
-            <li><a href="https://www.hellotalk.com/" target="_blank">HelloTalk</a> - 일본어 원어민과 언어 교환이 가능한 앱입니다.</li>
-            <li><a href="https://www.tandem.net/" target="_blank">Tandem</a> - 대화 파트너를 찾고 교류할 수 있는 언어 교환 앱입니다.</li>
-        </ul>
-    </section>
+        <section id="listening">
+            <h2>듣기</h2>
+            <div class="levels">
+                <a href="https://www3.nhk.or.jp/news/easy/" target="_blank">쉬움</a>
+                <a href="https://www.japanesepod101.com/" target="_blank">중간</a>
+                <a href="https://www3.nhk.or.jp/nhkworld/ko/radio/learn/" target="_blank">어려움</a>
+                <a href="https://www.tbs.co.jp/radio/radioclub/" target="_blank">전문가</a>
+    
+            </div>
+        </section>
 
-    <section id="reading">
-        <h2>읽기 전략</h2>
-        <p>읽기 실력을 높일 수 있는 자료를 추천합니다:</p>
-        <ul>
-            <li><a href="https://watanoc.com/" target="_blank">Watanoc</a> - 초보자를 위한 무료 일본어 읽기 자료입니다.</li>
-            <li><a href="https://www.satorireader.com/" target="_blank">Satori Reader</a> - 레벨에 맞는 일본어 기사를 읽고 어휘를 배울 수 있습니다.</li>
-        </ul>
-    </section>
+        <section id="speaking">
+            <h2>말하기</h2>
+            <div class="levels">
+                <a href="https://www.hellotalk.com/" target="_blank">쉬움</a>
+                <a href="https://www.tandem.net/" target="_blank">중간</a>
+                <a href="https://www.italki.com/" target="_blank">어려움</a>
+                <a href="https://www.meetup.com/ko-KR/cities/jp/tokyo/" target="_blank">전문가</a>  
+            </div>
+        </section>
 
-    <section id="writing">
-        <h2>쓰기 전략</h2>
-        <p>일본어로 글을 작성하고 피드백을 받을 수 있는 리소스를 소개합니다:</p>
-        <ul>
-            <li><a href="https://lang-8.com/" target="_blank">Lang-8</a> - 작성한 글에 대해 일본어 원어민의 피드백을 받을 수 있습니다.</li>
-            <li><a href="https://www.italki.com/" target="_blank">Italki</a> - 일본어 교사와의 대화를 통해 쓰기 연습을 할 수 있습니다.</li>
-        </ul>
-    </section>
+        <section id="reading">
+            <h2>읽기</h2>
+            <div class="levels">
+                <a href="https://watanoc.com/" target="_blank">쉬움</a>
+                <a href="https://www.satorireader.com/" target="_blank">중간</a>
+                <a href="https://matcha-jp.com/" target="_blank">어려움</a>
+                <a href="https://www.asahi.com/" target="_blank">전문가</a>
+            </div>
+        </section>
 
-    <section id="resources">
-        <h2>일본어 필수 학습 자료</h2>
-        <p>추가 학습을 위해 추천하는 자료들입니다:</p>
-        <ul>
-            <li><a href="https://jlptsensei.com/" target="_blank">JLPT Study Resources</a> - JLPT 준비를 위한 기초 문법, 어휘, 한자 자료.</li>
-            <li><a href="https://apps.ankiweb.net/" target="_blank">Anki</a> - 플래시카드를 통해 어휘와 한자를 효과적으로 외울 수 있는 앱입니다.</li>
-        </ul>
-    </section>
+        <section id="writing">
+            <h2>쓰기</h2>
+            <div class="levels">
+                <a href="https://lang-8.com/" target="_blank">쉬움</a>
+                <a href="https://www.italki.com/" target="_blank">중간</a>
+                <a href="https://hinative.com/ko" target="_blank">어려움</a>
+                <a href="https://camp-fire.jp/" target="_blank">전문가</a>             
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2024 일본어 학습 웹사이트</p>
+        <p>&copy; 2024 일본어 학습 사이트</p>
     </footer>
 </body>
 </html>
