--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3758454239921831"
      crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    google-site-verification=6ZO86Pb_djE2-838qpJrYBKXN7_-nlOHMdySIbQm_Ec
     <meta name="naver-site-verification" content="d6b7ff7935f694bf060cf7d7dbb8a11e3c72c0c5" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>일본어 학습 사이트</title>
